# musestruct

./: .cargo-watch.toml  .gitignore  README.md  SPOTIFY_SETUP.md  dev-setup.sh  docker-compose.yml  flake.nix  pubspec.yaml  spotify_player.html
.github/workflows/: build-backend.yml
android/app/: build.gradle.kts
backend/: Cargo.toml  Dockerfile
backend/src/: lib.rs  m20250920_124747_add_account_username_to_streaming_services.rs  main.rs
backend/src/handlers/: audio_analysis.rs  auth.rs  mod.rs  music.rs  playlist.rs  queue.rs  saved_albums.rs  saved_tracks.rs  streaming.rs
backend/src/migrator/: m20250115_000001_create_users_table.rs  m20250115_000002_create_user_sessions_table.rs  m20250115_000003_create_albums_table.rs  m20250115_000004_create_songs_table.rs  m20250115_000005_create_playlists_table.rs  m20250115_000006_create_playlist_songs_table.rs  m20250115_000007_create_user_streaming_services_table.rs  m20250127_000001_create_saved_albums_table.rs  m20250920_155644_create_saved_tracks_table.rs  m20250920_161656_fix_saved_tracks_id_column.rs  m20250920_200000_create_queue_items_table.rs  m20250920_210000_create_playlist_items.rs  m20250920_222456_add_track_details_to_playlist_items.rs  m20250927_000001_add_bpm_to_saved_tracks.rs  m20250928_000001_add_key_fields_to_saved_tracks.rs  mod.rs
backend/src/models/: album.rs  mod.rs  playlist.rs  playlist_item.rs  playlist_song.rs  queue_item.rs  saved_album.rs  saved_track.rs  song.rs  streaming_service.rs  user.rs  user_session.rs
backend/src/services/: audio_analysis.rs  auth.rs  key_analysis.rs  mod.rs  spectrogram_bpm_analysis.rs  streaming_service.rs
backend/src/services/streaming/: interface.rs  local.rs  mod.rs  qobuz.rs  spotify.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/auth/providers/: auth_provider.dart
lib/auth/services/: auth_api_service.dart
lib/core/models/: api_response.dart
lib/core/providers/: connectivity_provider.dart  navigation_provider.dart  theme_provider.dart
lib/core/services/: api_service.dart  app_config_service.dart  audio_analysis_service.dart  audio_service.dart  audio_service_handler.dart  base_api_service.dart  connectivity_service.dart  spotify_web_player.dart  spotify_webview_player.dart
lib/core/themes/: app_themes.dart
lib/core/utils/: url_utils.dart
lib/core/widgets/: album_tile.dart  base_layout.dart  (+9 more)
lib/models/: api_response.dart  music.dart  playlist.dart  user.dart
lib/providers/: auth_provider.dart  connectivity_provider.dart  music_provider.dart  playlist_provider.dart  queue_provider.dart  saved_tracks_provider.dart  streaming_provider.dart
lib/services/: api_service.dart  app_config_service.dart  audio_service.dart  auth_api_service.dart  base_api_service.dart  connectivity_service.dart  music_api_service.dart  playlist_api_service.dart  queue_api_service.dart  saved_tracks_api_service.dart  spotify_api_service.dart  spotify_web_player.dart  spotify_webview_player.dart
lib/widgets/: backend_status_indicator.dart  hidden_spotify_webview.dart  music_player_bar.dart  playlist_search_tile.dart  service_filter.dart  spotify_webview_widget.dart  track_tile.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
scripts/: create-emulator.sh  delete-emulator.sh  list-emulators.sh  start-backend.sh  start-emulator-headless.sh  start-emulator-software.sh  start-emulator.sh  stop-backend.sh
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+45 files in other folders)
