[package]
name = "musestruct_backend"
version = "0.1.0"
edition = "2024"
default-run = "musestruct_backend"

[lib]
name = "musestruct_backend"
path = "src/lib.rs"

[[bin]]
name = "musestruct_backend"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
# Web framework
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Database - SeaORM
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "with-json"] }
sea-orm-migration = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication (session-based)
# No JWT dependencies - using simple session tokens

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.9.2"
base64 = "0.22"
md5 = "0.7"

# Utilities
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0.6"

# Environment & Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket support
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures-util = "0.3"
async-trait = "0.1"

# HTTP client (for external services if needed)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2.1"

[dev-dependencies]
# SeaORM CLI for migrations
sea-orm-cli = "1.1"
